[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "workloadiq"
version = "0.0.1"
description = "Forecasting and root cause analysis engine for event-driven GCP workloads"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "canis-minor" }]
keywords = ["rca", "observability", "gcp", "pubsub", "bigquery", "forecasting"]
# v0 intentionally has NO third-party runtime dependencies — pure standard library
# so the CLI runs anywhere with `python3 -m workloadiq` and no install step.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
workloadiq = "workloadiq.cli:main"

[tool.setuptools.packages.find]
include = ["workloadiq*"]
